package com.lft.visitor.improve.element;

import com.lft.visitor.improve.visitor.Visitor;

/**
 *
 */
public abstract class Student {
	public abstract void accept(Visitor v);
}
