@startuml
!define DARK
!include G:\WorkSpace\Java\IJCode\Design-Pattern\lib\LFT-UML.puml
' 允许各种图混合使用
allowmixing

' 标题
title 简单工厂模式

/'
抽象类 Pizza
'/
abstract class Pizza{
	+ prepare(): void
	+ bake(): void
	+ cut(): void
	+ box(): void
}

/'
具体分类Pizza
'/
class CheesePizza
class GreekPizza
class PepperPizza
class ChinaPizza

/'
实现抽象类Pizza
'/
Pizza <|-- CheesePizza
Pizza <|-- GreekPizza
Pizza <|-- PepperPizza
Pizza <|-- ChinaPizza

/'
简单工厂类
'/
class SimpleFactory

CheesePizza <.. SimpleFactory
GreekPizza <.. SimpleFactory
PepperPizza <.. SimpleFactory
ChinaPizza <.. SimpleFactory

class OrderPizza
class OrderPizza1
class OrderPizza2
class OrderPizza3

SimpleFactory --o OrderPizza
SimpleFactory --o OrderPizza1
SimpleFactory --o OrderPizza2
SimpleFactory --o OrderPizza3

class PizzaStore
class PizzaStore1
class PizzaStore2
class PizzaStore3

OrderPizza <.. PizzaStore
OrderPizza1 <.. PizzaStore1
OrderPizza2 <.. PizzaStore2
OrderPizza3 <.. PizzaStore3



/''''说明与样式
' 类之间的关系
依赖关系..>     .>		<.		<..
继承关系--|>    -|>		<|-		<|--
实现关系..|>    .|>		<|.		<|..
关联关系-->     <-->		--		->		<->
聚合关系--o     <--o		o-		o--
组合关系--*     <--*		*-		*--

' 访问权限
- private
# protected
~ default
+ public

' 备注
1. note top of Object : 备注在对象的四周
2. note "无方位位置" as Note1
3. note left: 备注在前一个类的四周
4. note on link #red : 链接注释
5. note left of Object
	注释内容
   end note

' 包
package com.lft.design.pattern {
	' 接口
	interface Interface
	' 棒棒糖接口()-- ()- --() -()
	Interface2 ()-- A
	' 抽象类
	abstract class AbstractClass
}
' 枚举
enum TimeUnit{
	DAYS
	HOURS
	MINUTES
	SECONDS
}

' 泛型
class Eye<? extends Head>{

}

' 命名空间
namespace net.dummy #DDDDDD {
	Meeting o-- Person
	.BaseClass <|- Meeting
}

' 改变箭头方向 left right up down
A .up.> B

' 关系类
class Student{
	Name
}
Student "0..*" -- "1..*" Course
(Student, Course) . Enrollment
class Enrollment{
	drop()
	cancel()
}

' 普通类
class Person{
	..Field..
	{field}				- name: String
	{static}{field}		- head: Head
	--Constructor--
	+ Person(name: String)
	==Method==
	{method}			+ getName(): String
	{abstract}{method}	+ doSomething(): void
	__Other__
}
class Head
Person "1" *-- "1" Head : contains >

' 类说明
class A << (I,#FF7700) 说明 >>
' 箭头颜色
A .[#395862].> B
'/
@enduml